@@ -5,7 +5,10 @@ import org.openjdk.jmh.annotations.BenchmarkMode;
 import org.openjdk.jmh.annotations.Fork;
 import org.openjdk.jmh.annotations.Setup;
 import org.openjdk.jmh.annotations.Param;
+<<<<<<< HEAD
 import org.openjdk.jmh.annotations.TearDown;
+=======
+>>>>>>> 9727f4bdddc071e6f59806087339f345405ab004
 import org.openjdk.jmh.annotations.Measurement;
 import org.openjdk.jmh.annotations.Mode;
 import org.openjdk.jmh.annotations.OutputTimeUnit;
@@ -19,13 +22,21 @@ import java.util.concurrent.TimeUnit;
 @Warmup(iterations = 5, time = 500, timeUnit = TimeUnit.MILLISECONDS)
 @Measurement(iterations = 10, time = 500, timeUnit = TimeUnit.MILLISECONDS)
 @State(org.openjdk.jmh.annotations.Scope.Thread)
+<<<<<<< HEAD
 @OutputTimeUnit(TimeUnit.NANOSECONDS)
 @Fork(value = 1, jvmArgsAppend = { "--enable-native-access=ALL-UNNAMED", "--enable-preview" })
+=======
+@OutputTimeUnit(TimeUnit.MILLISECONDS)
+@Fork(value = 3, jvmArgsAppend = { "--enable-native-access=ALL-UNNAMED" })
+>>>>>>> 9727f4bdddc071e6f59806087339f345405ab004
 
 public class XorTest {
 
     XorOp impl = null;
+<<<<<<< HEAD
     int count;
+=======
+>>>>>>> 9727f4bdddc071e6f59806087339f345405ab004
     int alen;
     int off;
     int len;
@@ -44,29 +55,76 @@ public class XorTest {
     }
 
     public enum ArrayKind {
+<<<<<<< HEAD
         ELEMENTS,
         REGION,
         CRITICAL,
         FOREIGN;
+=======
+        JNI_ELEMENTS,
+        JNI_REGION,
+        JNI_CRITICAL,
+        FOREIGN_NO_INIT,
+        FOREIGN_INIT,
+        FOREIGN_CRITICAL,
+        UNSAFE;
+>>>>>>> 9727f4bdddc071e6f59806087339f345405ab004
     }
 
     @Setup
     public void setup() throws Throwable {
+<<<<<<< HEAD
         switch (sizeKind) {
             case SMALL:
                 count = 1000;
+=======
+        switch (arrayKind) {
+            case JNI_CRITICAL:
+                impl = new GetArrayCriticalXorOpImpl();
+                break;
+            case JNI_ELEMENTS:
+                impl = new GetArrayElementsXorOpImpl();
+                break;
+            case JNI_REGION:
+                impl = new GetArrayRegionXorOpImpl();
+                break;
+            case FOREIGN_NO_INIT:
+                impl = new GetArrayForeignXorOpImpl();
+                break;
+            case FOREIGN_INIT:
+                impl = new GetArrayForeignXorOpInitImpl();
+                break;
+            case FOREIGN_CRITICAL:
+                impl = new GetArrayForeignXorOpCriticalImpl();
+                break;
+            case UNSAFE:
+                impl = new GetArrayUnsafeXorOpImpl();
+                break;
+            default:
+                throw new UnsupportedOperationException(arrayKind.toString());
+        }
+
+        switch (sizeKind) {
+            case SMALL:
+>>>>>>> 9727f4bdddc071e6f59806087339f345405ab004
                 alen = 1048576;             // 1 MB
                 off = 1024 * 10;
                 len = 1024 * 100;           // 100 KB
                 break;
             case MEDIUM:
+<<<<<<< HEAD
                 count = 50;
+=======
+>>>>>>> 9727f4bdddc071e6f59806087339f345405ab004
                 alen = 1048576 * 8;         // 8 MB
                 off = 1048576 * 1;
                 len = 1048576 * 2;          // 2 MB
                 break;
             case LARGE:
+<<<<<<< HEAD
                 count = 10;
+=======
+>>>>>>> 9727f4bdddc071e6f59806087339f345405ab004
                 alen = 1048576 * 100;       // 100 MB
                 off = 1048576 * 5;
                 len = 1048576 * 10;         // 10 MB
@@ -75,6 +133,7 @@ public class XorTest {
                 throw new UnsupportedOperationException(sizeKind.toString());
         }
 
+<<<<<<< HEAD
         switch (arrayKind) {
             case CRITICAL:
                 impl = new GetArrayCriticalXorOpImpl();
@@ -92,6 +151,8 @@ public class XorTest {
                 throw new UnsupportedOperationException(arrayKind.toString());
         }
 
+=======
+>>>>>>> 9727f4bdddc071e6f59806087339f345405ab004
         src = new byte[alen];
         dst = new byte[alen];
         Arrays.fill(src, off, off + len, (byte)0xaa);
@@ -100,6 +161,7 @@ public class XorTest {
     }
 
     void check() throws Throwable {
+<<<<<<< HEAD
         impl.copy(count, src, off, dst, off, len);
         if (arrayKind != ArrayKind.CRITICAL && !verify(dst, off, off + len, (byte)0xaa)) {
             throw new IllegalStateException("Copy failed to verify");
@@ -109,12 +171,18 @@ public class XorTest {
         impl.xor(src, off, dst, off, len);
         if (!verify(dst, off, off + len, (byte)0xf0)) {
             throw new IllegalStateException("Xor failed to verify");
+=======
+        impl.xor(src, off, dst, off, len);
+        if (!verify(dst, off, off + len, (byte)0xf0)) {
+            throw new IllegalStateException("Failed to verify");
+>>>>>>> 9727f4bdddc071e6f59806087339f345405ab004
         }
     }
 
 
     @Benchmark
     public void xor() throws Throwable {
+<<<<<<< HEAD
         for (int i = 0; i < count; ++i) {
             impl.xor(src, off, dst, off, len);
         }
@@ -123,6 +191,9 @@ public class XorTest {
     @Benchmark
     public void copy() throws Throwable {
         impl.copy(count, src, off, dst, off, len);
+=======
+        impl.xor(src, off, dst, off, len);
+>>>>>>> 9727f4bdddc071e6f59806087339f345405ab004
     }
 
     static boolean verify(byte[] buf, int start, int end, byte val) {
